--- a/TP_flow_matching.ipynb
+++ b/TP_flow_matching.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "## Expected Work\n",
     "\n",
-    " - Train a MLP neural network (defined previously) defining a time dependant vector field that goes from $p_0$ to $p_1$. To do so, use the flow matching loss using the independant coupling.\n",
+    " - Train a MLP neural network (defined previously) defining a time dependant vector field that goes from $p_0$ to $p_1$. To do so, use the flow matching loss using the independent coupling.\n",
     " - Implement a Euler scheme to integrate this vector field, taking a large number of samples from $p_0$ and integrating the trajectory should ends to a distribution that looks like $p_1$.\n",
     " - Plot the trajectories followed by a these samples throughout the integration. "
    ]
