--- a/TP_flow_matching.ipynb
+++ b/TP_flow_matching.ipynb
@@ -65,7 +65,8 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import numpy as np\n",
-    "from torchdyn.datasets import generate_moons\n",
+    "# from torchdyn.datasets import generate_moons\n",
+    "from sklearn.datasets import make_moons as generate_moons\n",
     "import ot as pot # For optimal transport\n",
     "\n",
     "use_cuda = torch.cuda.is_available()\n",
@@ -186,7 +187,7 @@
     "\n",
     " - Train a MLP neural network (defined previously) defining a time dependant vector field that goes from $p_0$ to $p_1$. To do so, use the flow matching loss using the independent coupling.\n",
     " - Implement a Euler scheme to integrate this vector field, taking a large number of samples from $p_0$ and integrating the trajectory should ends to a distribution that looks like $p_1$.\n",
-    " - Plot the trajectories followed by a these samples throughout the integration. "
+    " - Plot the trajectories followed by a these samples throughout the time integration. "
    ]
   },
   {
